--- a/src/app/components/assessment-info/assessment-info.component.html
+++ b/src/app/components/assessment-info/assessment-info.component.html
@@ -1,1 +1,8 @@
-<p>assessment-info works!</p>
+<div>
+  <img [src]="logo" alt="" />
+  <h6>{{ title }}</h6>
+  <h6>{{ subText }}</h6>
+  <img [src]="image" alt="" />
+  <video [src]="video"></video>
+  <button (click)="start()">Start Assessment</button>
+</div>
