multiple assessments with single code

--- a/src/app/components/raisec/raisec.component.html
+++ b/src/app/components/raisec/raisec.component.html
@@ -1,2 +1,3 @@
 <p>raisec works!</p>
+<app-assessments-questions [question]="questionNumber"></app-assessments-questions>
 <button (click)="next()">Next Question</button>
