--- a/src/app/components/assessments/assessments.component.html
+++ b/src/app/components/assessments/assessments.component.html
@@ -7,6 +7,18 @@
   image="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.akamai.com%2Fproducts%2Fimage-and-video-manager&psig=AOvVaw0Lq_SWcGHwl0Eebn3cqlqq&ust=1720097789274000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCIioreL1iocDFQAAAAAdAAAAABAE"
   (startAssessment)="start()"
 ></app-assessment-info>
-<app-thomas-assessment *ngIf="!intro && assessmentType == 'thomas'"> </app-thomas-assessment>
+
+<!-- can have separate components, but results in duplicate code  -->
+<!-- <app-thomas-assessment *ngIf="!intro && assessmentType == 'thomas'">
+</app-thomas-assessment>
 <app-midas *ngIf="!intro && assessmentType == 'midas'"></app-midas>
-<app-raisec *ngIf="!intro && assessmentType == 'raisec'"></app-raisec>
+<app-raisec *ngIf="!intro && assessmentType == 'raisec'"></app-raisec> -->
+
+<!-- better is use common template  -->
+<ng-container *ngIf="!intro">
+  <app-assessments-questions
+  [assessmentType]="assessmentType"
+    [question]="questionNumber"
+  ></app-assessments-questions>
+  <button (click)="next()">Next</button>
+</ng-container>
