--- a/src/app/components/thomas-assessment/thomas-assessment.component.html
+++ b/src/app/components/thomas-assessment/thomas-assessment.component.html
@@ -1,2 +1,3 @@
 <p>Thomas</p>
+<app-assessments-questions [question]="questionNumber"></app-assessments-questions>
 <button (click)="next()">Next Question</button>
