--- a/src/app/components/assessment-info/assessment-info.component.html
+++ b/src/app/components/assessment-info/assessment-info.component.html
@@ -1,8 +1,12 @@
 <div>
   <img [src]="logo" alt="" />
-  <h6>{{ title }}</h6>
-  <h6>{{ subText }}</h6>
-  <img [src]="image" alt="" />
+  <h3>{{ title }}</h3>
+  <img [src]="logo" alt="" height="30px" width="30px">
+  <h4>{{ info }}</h4>
+  <img [src]="image" alt="">
+  <h6>{{ description1 }}</h6>
+  <h6>{{ description2 }}</h6>
+  <img [src]="image" height="30px" width="30px" alt="" />
   <video [src]="video"></video>
   <button (click)="start()">Start Assessment</button>
 </div>
