--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,3 @@
 <h2 (click)="goToAssessment('thomas')">Thomas</h2>
 <h2 (click)="goToAssessment('midas')">Midas</h2>
-<h2 (click)="goToAssessment('raisec')">Riasec</h2>
+<h2 (click)="goToAssessment('riasec')">Riasec</h2>
