--- a/src/app/components/midas/midas.component.html
+++ b/src/app/components/midas/midas.component.html
@@ -1,3 +1,3 @@
 <p>midas works!</p>
-<app-assessments-questions [question]="questionNumber"></app-assessments-questions>
+<!-- <app-assessments-questions [question]="questionNumber"></app-assessments-questions> -->
 <button (click)="next()">Next Question</button>
