--- a/src/app/components/assessments-questions/assessments-questions.component.html
+++ b/src/app/components/assessments-questions/assessments-questions.component.html
@@ -11,6 +11,6 @@
       </div>
     </div>
     <div>Q - {{ item.order }}/{{ assessConfig.totalQuestions }}</div>
-    <button (click)="next()">Next</button>
+    <button class="btn btn-primary" (click)="next()">Next</button>
   </div>
 </div>
